--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,68 @@
-node_modules/
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+.venv/
 venv/
+ENV/
 .env
+*.egg-info/
+dist/
+build/
+.coverage
+htmlcov/
+.pytest_cache/
+
+# Node.js
+node_modules/
+.next/
+out/
+.DS_Store
+*.pem
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# IDE
+.idea/
+.vscode/
+*.swp
+*.swo
+.DS_Store
+
+# ML
+ml/models/*.pt
+ml/models/*.pth
+ml/models/*.bin
+ml/data/raw/
+ml/data/processed/
+
+# Docker
+.docker/
+docker-compose.override.yml
+
+# Logs
+logs/
+*.log
+
+# Redis
+dump.rdb
+*.rdb
+
+# Testing
+.coverage
+coverage/
+.pytest_cache/
+
+# Misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
